WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145389
CSS animations in filling-forwards state shouldn't force compositing.
https://bugs.webkit.org/show_bug.cgi?id=145389
Summary
CSS animations in filling-forwards state shouldn't force compositing.
Andreas Kling
Reported
2015-05-26 14:49:12 PDT
<
rdar://problem/17923642
> Currently CSS animations will force elements to be composited indefinitely, even after the animation is done and we're just filling forwards. We should drop the compositing requirement when we reach the end, which would allow some content to flatten and use less memory.
Attachments
Patch
(4.20 KB, patch)
2015-05-26 14:50 PDT
,
Andreas Kling
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-mavericks
(683.75 KB, application/zip)
2015-05-26 15:33 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-mavericks-wk2
(915.95 KB, application/zip)
2015-05-26 15:36 PDT
,
Build Bot
no flags
Details
Patch
(14.56 KB, patch)
2015-06-01 16:05 PDT
,
Andreas Kling
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-05-26 14:50:43 PDT
Created
attachment 253742
[details]
Patch
Build Bot
Comment 2
2015-05-26 15:33:21 PDT
Comment on
attachment 253742
[details]
Patch
Attachment 253742
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5346369107656704
New failing tests: compositing/animation/filling-animation-overlap-at-end.html compositing/animation/filling-animation-overlap.html compositing/animation/layer-for-filling-animation.html
Build Bot
Comment 3
2015-05-26 15:33:24 PDT
Created
attachment 253747
[details]
Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 4
2015-05-26 15:36:20 PDT
Comment on
attachment 253742
[details]
Patch
Attachment 253742
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6548355433889792
New failing tests: compositing/animation/filling-animation-overlap-at-end.html compositing/animation/filling-animation-overlap.html compositing/animation/layer-for-filling-animation.html
Build Bot
Comment 5
2015-05-26 15:36:23 PDT
Created
attachment 253748
[details]
Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Andreas Kling
Comment 6
2015-06-01 16:05:34 PDT
Created
attachment 254020
[details]
Patch Patch2Stop letting fill-forwards affect compositing.
Simon Fraser (smfr)
Comment 7
2015-06-01 16:17:18 PDT
Comment on
attachment 254020
[details]
Patch r+, but you need a test that checks that a filling-forward transform animation doesn't make a compositing layer.
Andreas Kling
Comment 8
2015-06-01 19:30:03 PDT
Committed
r185097
: <
http://trac.webkit.org/changeset/185097
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug