CSS animations in filling-forwards state shouldn't force compositing. <https://webkit.org/b/145389> <rdar://problem/17923642>

Reviewed by Simon Fraser.

Source/WebCore:

Stop checking if a CSS animation is filling forwards when computing
compositing requirements.

This prevents finished animations from pinning elements in composited
state, and frees up a bunch of IOSurface memory on some content.

* page/animation/AnimationBase.h:
(WebCore::AnimationBase::isAnimatingProperty): Deleted.
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForAnimation):

LayoutTests:

Remove tests that were only here to check that animations in fill-forwards
state would participate in overlap testing.

* compositing/animation/layer-for-filling-animation-expected.txt: Update expected result
here to reflect that we no longer expect filling-forwards animations to get composited.

* compositing/animation/filling-animation-overlap-at-end-expected.txt: Removed.
* compositing/animation/filling-animation-overlap-at-end.html: Removed.
* compositing/animation/filling-animation-overlap-expected.txt: Removed.
* compositing/animation/filling-animation-overlap.html: Removed.
* platform/ios-sim-deprecated/compositing/animation/filling-animation-overlap-at-end-expected.txt: Removed.
* platform/ios-sim-deprecated/compositing/animation/filling-animation-overlap-expected.txt: Removed.
* platform/ios-sim-deprecated/compositing/animation/layer-for-filling-animation-expected.txt: Removed.

Canonical link: https://commits.webkit.org/163582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185097 268f45cc-cd09-0410-ab3c-d52691b4dbfc